# optcg_api

./: .gitignore  BACKLOG.md  CHANGELOG.md  README.md  pyproject.toml
alembic/versions/: 0006_add_missing_indexes.py  681d524342bf_add_image_path_to_naip.py  75adbb637f38_add_naip_serial_updated_ts_trigger.py  8a5145c40a8a_initial.py  a1b2c3d4e5f7_add_naip_is_errata.py  a22f8db88250_add_image_path_to_card.py  a3b4c5d6e7f8_block_as_fk_on_card_naip_add_banned.py  b1c2d3e4f5a6_add_timestamps_to_remaining_tables.py  b2c3d4e5f6a7_redesign_effect_trigger_as_lookup.py  b2c3d4e5f6a8_add_set_series_ord.py  b4c5d6e7f8a9_schema_gaps_fix.py  c1d2e3f4a5b6_fix_ts_columns_date_to_datetime.py  c3d4e5f6a7b8_normalize_trigger_effect_to_junctions.py  c3d4e5f6a7b9_naip_full_data_parity.py  c3f8a1d92e74_rename_naip_desc_to_effect_and_add_naip_.py  d2e3f4a5b6c7_backfill_ts_date_only_to_datetime.py  d4e5f6a7b8c9_naip_effect_trigger_as_direct_fk.py  d67a59a0943a_add_naip_serial_max_and_naip_serial_.py  e1a2b3c4d5e6_rename_tables_to_snake_case.py  e5f6a7b8c9d0_normalize_name_image_card_text.py  f1a2b3c4d5e6_add_set_code_unique_naip_default_index.py  f3a9b2c1d4e5_add_cardeffect_cardtrigger_tables.py  f6a7b8c9d0e1_add_timestamps_to_all_tables.py  g1h2i3j4k5l6_add_naip_sort_order.py  h2i3j4k5l6m7_db_side_timestamps.py
doc/: ER.dia  MR.dia
scripts/: ingest.py
src/optcg_api/: models.py
src/optcg_api/routers/: cards.py  naips.py
