[project]
name = "optcg_api"
version = "0.1.0"
description = "OPTCG API."
authors = [{ name = "Ran#" }]
license = { text = "GPLv3" }
requires-python = ">=3.13.7,<3.14"
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.15.2,<0.16.0", "pytest>=9.0.2,<10.0.0"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[project.scripts]
opapi = "optcg_api.main:main"
